# thread-play

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  routine.rs
src/parallel/: mod.rs  options.rs  rayon.rs  std.rs  tokio.rs
